2008-07-25  Douglas Bates <bates@stat.wisc.edu>

	* [r202] DESCRIPTION, src/lmer.c: Implement cloglog inverse link
	  function, new release
	* [r201] DESCRIPTION, R/jml.R, data/VerbAgg.rda, man/VerbAgg.Rd: Add
	  VerbAgg data set and documentation. Prepare for release

2008-07-17  Douglas Bates <bates@stat.wisc.edu>

	* [r197] R/lmer.R: Use dummy call in new("mer", ...) not huge call that
	  is later overwritten
	* [r196] src/init.c: Switch to CALLDEF macro

2008-07-12  Douglas Bates <bates@stat.wisc.edu>

	* [r193] inst/doc/Implementation.pdf, inst/doc/PLSvGLS.pdf,
	  inst/doc/Theory.pdf: Updates of vignettes

2008-07-11  Douglas Bates <bates@stat.wisc.edu>

	* [r192] DESCRIPTION, R/lmer.R: Remove mc from list with doFit = FALSE
	  and in arguments to lmer_finalize and glmer_finalize. New version

2008-07-10  Douglas Bates <bates@stat.wisc.edu>

	* [r190] inst/doc/Implementation.pdf, inst/doc/PLSvGLS.Rnw,
	  inst/doc/PLSvGLS.pdf, inst/doc/Theory.pdf: Add a section on the
	  hatMatrix to PLSvGLS. Update PDFs
	* [r189] DESCRIPTION, R/lmer.R, man/lmer.Rd: incorporate doFit argument
	  in lmer and friends. Create glmer_finalize function. New release
	* [r188] tests/nlmer.R, tests/nlmer.Rout.save: nlmer tests and results
	  updated to new methods
	* [r187] src/lmer.c: Correction, from Bin Dai, to calculation of
	  deviance for NLMMs

2008-06-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* [r183] DESCRIPTION: aargh! forgot to commit the Matrix(>= 0.999375-10)
	  dependency

2008-06-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* [r182] ChangeLog, DESCRIPTION, tests/nlmer.R, tests/nlmer.Rout.save:
	  higher tolerance in nlmer tests; Version .999375-20

	* DESCRIPTION (Version): 0.999375-20 ready for CRAN

	* tests/nlmer.R (allEQ): test with high tolerance.

2008-06-25  Douglas Bates <bates@stat.wisc.edu>

	* [r180] DESCRIPTION, R/lmer.R, src/init.c, src/lmer.c,
	  src/lmer.h: Fix single-argument anova method; new version
